Correccion apis PUT
Devuelve json con info al terminar la accion del put
